--- a/afs/templates/views/components/workflows/object-search-step.htm
+++ b/afs/templates/views/components/workflows/object-search-step.htm
@@ -13,13 +13,14 @@
         <div style="display: inline-flex; justify-content: space-between; width: 100%; height: 100%">    
             <div style="display:flex; flex-direction: column; width: 100%;">
                 <!-- ko foreach: targetResources -->
-                <div style="padding: 10px;" data-bind="click: function(){$parent.updateTileData($data['_source']['resourceinstanceid'])}, text: JSON.stringify(
-                    {
-                        name: $data['_source']['displayname'],
-                        resourceid: $data['_source']['resourceinstanceid'],
-                        selected: $parent.value().indexOf($data['_source']['resourceinstanceid']) >= 0
-                    }, null, '   '), css: {'selected-instance': $parent.value().indexOf($data['_source']['resourceinstanceid']) >= 0}">
-                </div>
+                <div class='resource-report' data-bind="component: {
+                    name: $parent.reportLookup[$data.report.get('template_id')()].componentname,
+                    params: {
+                        report: $data.report,
+                        summary: true
+                    }
+                }, css: {'selected-instance': $parent.value().indexOf($data['_source']['resourceinstanceid']) >= 0},
+                click: function(){$parent.updateTileData($data['_source']['resourceinstanceid'])}"></div>
                 <!-- /ko -->
             </div>
 
