components related to rendering list of physical instances and their iiif tiledata, re #127

--- a/afs/templates/javascript.htm
+++ b/afs/templates/javascript.htm
@@ -24,7 +24,8 @@
 
 
 {% block urls %}
-                physical_thing_search_results: "{% url 'physical-thing-search-results' %}",
+    physical_thing_search_results: "{% url 'physical-thing-search-results' %}",
+    physical_things_set: "{% url 'physical_things_set' %}",
 {% endblock urls %}
 
 {% block project_modules %}
