update template and workflow json, re #127"

--- a/afs/templates/views/components/workflows/physical-thing-list.htm
+++ b/afs/templates/views/components/workflows/physical-thing-list.htm
@@ -1,6 +1,6 @@
 <div style="display: flex; flex-direction: column;">
     <div>
-        <h3>heres the list</h3>
+        <h3>Physical Things in Collection</h3>
     </div>
     <div>
         <!-- ko foreach: items -->
