--- a/afs/templates/views/components/workflows/object-search-step.htm
+++ b/afs/templates/views/components/workflows/object-search-step.htm
@@ -10,7 +10,7 @@
         </div>
     </div>
     <div class="physical-object-search-results" style="height: 100%;">
-        <div style="display: inline-flex; justify-content: space-between; width: 100%; height: 100%">    
+        <div style="display: inline-flex; justify-content: space-between; width: 100%; height: 100%; overflow-y: hidden;">    
             <div style="display:flex; flex-direction: column; width: 100%; overflow-y: auto;">
                 <!-- ko foreach: targetResources -->
                 <div class='resource-report' data-bind="component: {
