--- a/afs/templates/views/components/workflows/object-search-step.htm
+++ b/afs/templates/views/components/workflows/object-search-step.htm
@@ -10,7 +10,8 @@
         </div>
     </div>
     <div class="physical-object-search-results" style="height: 100%;">
-        <div style="display: inline-flex; justify-content: space-between; width: 100%; height: 100%; overflow-y: hidden;">    
+        <div style="display: inline-flex; justify-content: space-between; width: 100%; height: 100%; overflow-y: hidden;">
+            <div style="display:flex; flex-direction: column;">    
             <div style="display:flex; flex-direction: column; width: 100%; overflow-y: auto;">
                 <!-- ko foreach: targetResources -->
                 <div class='resource-report' data-bind="component: {
@@ -22,6 +23,36 @@
                 }, css: {'selected-instance': $parent.value().indexOf($data['_source']['resourceinstanceid']) >= 0},
                 click: function(){$parent.updateTileData($data['_source']['resourceinstanceid'])}"></div>
                 <!-- /ko -->
+            </div>
+            <!-- <div style="margin-bottom: 57px; background-color: chartreuse;">Test</div> -->
+            <div class="sampling-activity-search-panel" style="
+                margin-bottom: 57px;
+                position: relative;
+                align-items: center;
+                justify-content: space-around;
+                border-top: 1px solid #ddd;
+                width: 100%">
+                <div style="width: 100%;">
+                    <div data-bind="with: paginator">
+                        <div class="text-center">
+                            <ul class="pagination">
+                                <li><a data-bind="css: {'disabled': !has_previous()}, click: $parent.newPage.bind($parent, previous_page_number())" href="#">«</a></li>
+                                <!-- ko foreach: { data: pages, as: 'page' } -->
+                                    <!-- ko if: page -->
+                                    <li class="page" data-bind="click: $parents[1].newPage.bind($parents[1]), css: {'current active': (page == $parent.current_page())}">
+                                        <a href="#" data-bind="text: page, attr:{'data-page':page}"></a>
+                                    </li>
+                                    <!-- /ko -->
+                                    <!-- ko ifnot: page -->
+                                    <li class="disabled"><a href="#">...</a></li>
+                                    <!-- /ko -->
+                                <!-- /ko -->
+                                <li><a data-bind="css: { 'disabled': !has_next()}, click: $parent.newPage.bind($parent, next_page_number())" href="#">»</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
             </div>
 
             <div class="wf-multi-tile-step-list" style="padding: 0px;">
@@ -61,35 +92,6 @@
                     </div>
                  </div>
                 <!-- /ko -->
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="sampling-activity-search-panel" style="
-        position: absolute; 
-        bottom: 0px; 
-        display: inline-flex; 
-        align-items: center;
-        justify-content: space-around;
-        border-top: 1px solid #ddd;
-        width: 100%">
-        <div style="width: 100%;">
-            <div id="paginator" data-bind="with: paginator">
-                <div class="text-center">
-                    <ul class="pagination">
-                        <li><a data-bind="css: {'disabled': !has_previous()}, click: $parent.newPage.bind($parent, previous_page_number())" href="#">«</a></li>
-                        <!-- ko foreach: { data: pages, as: 'page' } -->
-                            <!-- ko if: page -->
-                            <li class="page" data-bind="click: $parents[1].newPage.bind($parents[1]), css: {'current active': (page == $parent.current_page())}">
-                                <a href="#" data-bind="text: page, attr:{'data-page':page}"></a>
-                            </li>
-                            <!-- /ko -->
-                            <!-- ko ifnot: page -->
-                            <li class="disabled"><a href="#">...</a></li>
-                            <!-- /ko -->
-                        <!-- /ko -->
-                        <li><a data-bind="css: { 'disabled': !has_next()}, click: $parent.newPage.bind($parent, next_page_number())" href="#">»</a></li>
-                    </ul>
                 </div>
             </div>
         </div>
