--- a/afs/templates/views/components/reports/physical-thing.htm
+++ b/afs/templates/views/components/reports/physical-thing.htm
@@ -1,33 +1,32 @@
 {% extends "views/report-templates/tabbed.htm" %} {% load i18n %} {% block summary %}
 
-<div class="relative report-title-bar" data-bind="if: showTitleBar">
-
-    <!-- Title Block -->
-    <div class="report-toolbar-preview ep-form-toolbar">
-        <h4 class="report-toolbar-title"><span data-bind="text: report.get('name')"></span> - <span data-bind="text: report.get('displayname') "></span></h4>
-
-        <!-- Tools -->
-        <div class="ep-form-toolbar-tools mar-no flex">
-            <p class="report-print-date">{% trans "Report Date:" %} <span data-bind="text: reportDate"></span></p>
-        </div>
-    </div>
-</div>
-
 <div style="padding: 30px;">
     <div style="font-size: 16px; font-weight: 600; color: rgb(13, 59, 99);">
         <span data-bind="text: report.get('displayname') "></span>
         <a href="javascript(void);" style="float: right; text-decoration: underline;" data-bind="text: gallerySystemsTMSid"></a>
     </div>
+
     <div>
         <span>
             <span>{% trans "Artist:" %}</span>
-        <span style="color:rgb(6, 119, 218)" data-bind="text: 'temp'"></span>
+        <span data-bind="foreach: artists">
+            <span data-bind="if: $index > 0">, </span>
+        <a target="_blank" style="color:rgb(6, 119, 218)" data-bind="text: name, attr: { href: link }"></a>
+        </span>
         </span>
         <span style="float: right; font-size: 11px;">{% trans "Gallery Systems TMS id" %}</span>
     </div>
 
     <div style="color: gray;padding-top: 10px;padding-bottom: 10px;" data-bind="html: description"></div>
-    <div>Placeholder for manifest canvases</div>
+
+    <div data-bind="foreach: manifests">
+        <div style="margin-bottom: 15px;">
+            <div data-bind="text: label"></div>
+            <div data-bind="foreach: sequences">
+                <div data-bind="foreach: canvases"><img src="" data-bind="attr:{src: thumbnail, title: label}" /></div>
+            </div>
+        </div>
+    </div>
 
     <div style="font-size: 16px; font-weight: 600; color: rgb(13, 59, 99);padding-top: 10px;">{% trans "Included in the following Activites" %}</div>
     <div data-bind="foreach: activities">
