--- a/afs/templates/views/components/reports/physical-thing.htm
+++ b/afs/templates/views/components/reports/physical-thing.htm
@@ -3,22 +3,33 @@
 <div style="padding: 30px;">
     <div style="font-size: 16px; font-weight: 600; color: rgb(13, 59, 99);">
         <span data-bind="text: report.get('displayname') "></span>
-        <a href="javascript(void);" style="float: right; text-decoration: underline;" data-bind="text: gallerySystemsTMSid"></a>
+        <a href="javascript(void);" style="float: right; text-decoration: underline;"
+            data-bind="text: gallerySystemsTMSid"></a>
     </div>
 
     <div>
         <span>
             <span>{% trans "Artist:" %}</span>
-        <span data-bind="foreach: artists">
-            <span data-bind="if: $index > 0">, </span>
-        <a target="_blank" style="color:rgb(6, 119, 218)" data-bind="text: name, attr: { href: link }"></a>
-        </span>
+            <span data-bind="if: artists().length > 0">
+                <span data-bind="foreach: artists">
+                    <span data-bind="if: $index > 0">, </span>
+                    <a target="_blank" style="color:rgb(6, 119, 218)" data-bind="text: name, attr: { href: link }"></a>
+                </span>
+            </span>
+            <span data-bind="if: artists().length === 0">
+                {% trans "No artist information" %}
+            </span>
         </span>
         <span style="float: right; font-size: 11px;">{% trans "Gallery Systems TMS id" %}</span>
     </div>
 
-    <div style="color: gray;padding-top: 10px;padding-bottom: 10px;" data-bind="html: description"></div>
-
+    <span data-bind="if: description.length > 0">
+        <div style="color: gray;padding-top: 10px;padding-bottom: 10px;" data-bind="html: description"></div>
+    </span>
+    <span data-bind="if: description.length === 0">
+        {% trans "No description available" %}
+    </span>
+    
     <div data-bind="foreach: manifests">
         <div style="margin-bottom: 15px;">
             <div data-bind="text: label"></div>
@@ -28,10 +39,17 @@
         </div>
     </div>
 
-    <div style="font-size: 16px; font-weight: 600; color: rgb(13, 59, 99);padding-top: 10px;">{% trans "Included in the following Activites" %}</div>
-    <div data-bind="foreach: activities">
-        <a target="_blank" style="color:rgb(6, 119, 218)" data-bind="text: name, attr: { href: link }"></a>
+    <div style="font-size: 16px; font-weight: 600; color: rgb(13, 59, 99);padding-top: 10px;">
+        {% trans "Included in the following Activites" %}
     </div>
+    <span data-bind="if: activities().length > 0">
+        <div data-bind="foreach: activities">
+            <a target="_blank" style="color:rgb(6, 119, 218)" data-bind="text: name, attr: { href: link }"></a>
+        </div>
+    </span>
+    <span data-bind="if: activities().length === 0">
+        {% trans "No associated activities" %}
+    </span>
 </div>
 
 {% endblock summary %}
