Update title, sub title styling

--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -88,3 +88,39 @@
     right: 100px;
     font-weight: 800;
 }
+
+
+.model-summary-report {
+    padding: 20px 30px 30px 30px;
+}
+
+.summary-report-title {
+    color: rgb(13, 59, 99);
+    font-size: 17px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+.summary-report-link {
+    float: right;
+    color: #1576EB;
+}
+
+.summary-report-subtitle {
+    font-size: 14px;
+    margin-bottom: 5px;
+    color: #888;
+}
+
+.subtitle-category {
+    color: rgb(13, 59, 99);
+}
+
+.subtitle-value a {
+    color: #1576EB;
+}
+
+.subtitle-value-blank {
+    color: #777;
+}
+
