--- a/afs/templates/views/components/reports/physical-thing.htm
+++ b/afs/templates/views/components/reports/physical-thing.htm
@@ -1,26 +1,27 @@
 {% extends "views/report-templates/tabbed.htm" %} {% load i18n %} {% block summary %}
 
-<div style="padding: 30px;">
-    <div style="font-size: 16px; font-weight: 600; color: rgb(13, 59, 99);">
-        <span data-bind="text: report.get('displayname') "></span>
-        <a href="javascript(void);" style="float: right; text-decoration: underline;"
-            data-bind="text: gallerySystemsTMSid"></a>
+<div class="model-summary-report">
+    <div>
+        <h2 class="summary-report-title">
+            <span data-bind="text: report.get('displayname') "></span>
+            <a class="summary-report-link" href="javascript(void);" data-bind="text: gallerySystemsTMSid"></a>
+        </h2>
     </div>
 
-    <div>
+    <div class="summary-report-subtitle">
         <span>
-            <span>{% trans "Artist:" %}</span>
-            <span data-bind="if: artists().length > 0">
+            <span class="subtitle-category">{% trans "Artist:" %}</span>
+            <span class="subtitle-value" data-bind="if: artists().length > 0">
                 <span data-bind="foreach: artists">
                     <span data-bind="if: $index > 0">, </span>
-                    <a target="_blank" style="color:rgb(6, 119, 218)" data-bind="text: name, attr: { href: link }"></a>
+                    <a target="_blank" data-bind="text: name, attr: { href: link }"></a>
                 </span>
             </span>
-            <span data-bind="if: artists().length === 0">
+            <span class="subtitle-value-blank" data-bind="if: artists().length === 0">
                 {% trans "No artist information" %}
             </span>
         </span>
-        <span style="float: right; font-size: 11px;">{% trans "Gallery Systems TMS id" %}</span>
+        <span style="float: right; font-size: 13px;">{% trans "Gallery Systems TMS id" %}</span>
     </div>
 
     <span data-bind="if: description.length > 0">
