Update iiif canvas styling

--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -124,3 +124,27 @@
     color: #777;
 }
 
+.summary-report-description {
+    font-size: 14px;
+    color: #888;
+    margin-bottom: 10px;
+    line-height: 1.4;
+}
+
+.summary-report-manifests {
+    margin-bottom: 10px;
+    font-size: 14px;
+    color: #888;
+}
+
+.summary-report-manifest-title {
+    margin-bottom: 5px;
+    margin-top: 5px;
+}
+
+.summary-report-canvas {
+    max-height: 150px;
+    margin-right: 5px;
+    margin-bottom: 5px;
+}
+
