Update related activities style

--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -118,6 +118,7 @@
 
 .subtitle-value a {
     color: #1576EB;
+    font-size: 14px;
 }
 
 .subtitle-value-blank {
@@ -148,3 +149,21 @@
     margin-bottom: 5px;
 }
 
+.summary-report-related-panel {
+    color: #888;
+}
+
+.summary-report-related {
+    font-size: 16px; 
+    font-weight: 500; 
+    color: rgb(13, 59, 99);
+    padding-top: 10px;
+}
+
+.summary-report-related-panel .subtitle-value {
+    display: inline-grid;
+}
+
+.summary-report-related-list {
+    color:rgb(6, 119, 218);
+}
